<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Diamlah!</string>
    <style name="timeheader">
    	<item name="android:textSize">12sp</item>
    	<item name="android:textColor">#CCCCCC</item>
    	<item name="android:width">90sp</item>
    	<item name="android:textStyle">bold</item>
    	<item name="android:paddingLeft">1sp</item>
    	<item name="android:ellipsize">end</item>
    </style>
        <style name="oddevenbutton">
    	<item name="android:width">90sp</item>
    	<item name="android:textSize">12dp</item>
    	<item name="android:shadowDy">-1</item>
    	<item name="android:shadowRadius">1</item>
    	<item name="android:shadowDx">0</item>
    	<item name="android:textStyle">bold</item>
    	<item name="android:shadowColor">#FFFFFFFF</item>
    	<item name="android:textColor">#000000</item>
    	
    </style>
    <style name="dayheader">
    	<item name="android:textSize">12sp</item>
    	<item name="android:textColor">#a0a0a0</item>
    	<item name="android:width">90sp</item>
    	<item name="android:textStyle">bold</item>
    	<item name="android:ellipsize">end</item>
    	<item name="android:gravity">center</item>
    </style>
    <style name="block">
    	<item name="android:textSize">11sp</item>
    	<item name="android:textColor">#e9e9e9</item>
    	<item name="android:textStyle">bold</item>
    </style>
    <string name="chg_odd">Go to Odd Week</string>
    <string name="chg_even">Go to Even Week</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="odd">Odd Week</string>
    <string name="even">Even Week</string>
        
    <string name="empty_sch_title">Empty Schedule</string><string name="empty_sch">The schedule is empty. Would you like to download now?</string>
    <string name="vpn">Cannot connect to server. Are you sure you are on NUS campus?</string>
    <string name="vpn_title">Server not found</string>
    <string name="no_network">No Network. Do you want to go to the settings to connect to the Internet?</string>
    <string name="no_network_title">Unable to Download</string>
    <string name="add_mod">Add a New Module</string>
    <string name="time_out_of_range">Please select time between 8:00 AM to 12:00PM .</string><string name="time_out_of_range_title">Time Out of Range</string><string-array name="day_array">
        <item name="monday">Monday</item>
        <item name="tuesday">Tuesday</item>
        <item name="wedesday">Wednesday</item>
        <item name="thursday">Thursday</item>
        <item name="friday">Friday</item>
        <item name="saturday">Saturday</item>
        <item name="sunday">Sunday</item>
    </string-array>
    <string-array name="freq_array">
        <item name="every">Every Week</item>
        <item name="odd">Odd Week</item>
        <item name="even">Even Week</item>
    </string-array>
    <string-array name="type_array">
        <item name="lecture">Lecture</item>
        <item name="tutorial">Tutorial</item>
        <item name="lab">Lab</item>
        <item name="seminar">Seminar</item>
        <item name="even">Others</item>   
    </string-array>
    
    <string name="filter">Filter</string>
    <string name="update_mod">Update Schedule: </string>
    <string name="delete_sch_title">Delete</string>
    <string name="delete_sch">Are you sure? This action cannot be undone.</string>
    <color name="white">#FFFFFFFF</color>
    <color name="black">#000000</color>
    <color name="grey">#e9e9e9</color>
    <string name="detail_title">Details for</string>
    <string name="invert_time_title">Inverted Time</string>
    <string name="invert_time">The start time of the schedule cannot be later than its end time.</string>
    
     <style name="toggle">
     	<item name="android:textColor">#f4f4f4</item>
    	<item name="android:textSize">50sp</item>
    </style>
    <style name="frontbutton">
     	<item name="android:textColor">#282828</item>
    	<item name="android:textSize">18sp</item>
    	<item name="android:textStyle">bold</item>
    </style>
    
    <color name="gradbuttonstart">#d0ceb3</color>
    <color name="gradbuttonend">#908f7c</color>
    <color name="gradbuttonends">#b8b699</color>
    <color name="gradtogglestart2">#df2626</color>
    <color name="gradtoggleend2">#5a0808</color>
    <color name="gradtogglestart">#78d418</color>
    <color name="gradtoggleend">#4d8c0a</color>
    <color name="gradinactivestart">#c4c4c4</color>
    <color name="gradinactiveend">#505050</color>
    
    <style name="linear">
     	<item name="android:layout_width">fill_parent</item>
     	<item name="android:layout_height">wrap_content</item>
     	<item name="android:orientation">horizontal</item>
     	<item name="android:paddingTop">2sp</item>
     	<item name="android:paddingBottom">2sp</item>
     	<item name="android:layout_gravity">center_vertical</item>
    </style>
    <string name="back">Back</string>
    <string name="schedule_overlap_title">Schedule Overlap</string>
    <string name="schedule_overlap">The time of the schedule overlaps with an existing schedule.</string>
    <string name="how_to_use">Just go to the timetable, and start editing! Should be easy.</string>
    <string name="about">This is a project done by three good friends, who were frustrated by the lack of Android users in the wonderful school of NUS.\nDamien Tan Tai Rong (CEG1)\nChai Zheng Xin (CEG1)\nYap Wei Rong (CEG1)</string>
    <string name="clear_all">Are you sure? Any lost data cannot be retrieved.</string>
    <string name="clear_all_title">Clear Data</string>
    <string name="userIdInvalid">You did not enter a valid matric number.</string>
    <string name="userIdInvalid_title">Invalid Matric No</string>
    <string name="help">How to Use</string>
    <string name="exit">Close</string>
    <string name="credit">SweetiePlus Icons by Joseph North, available under a Creative Commons Attribution-ShareAlike license. © 2011, Joseph North.\n\nXML Serialization by Simple 2.5.3 .\n\nQuickAction Dialog from courtesy of Lorenz.\n\nDiamlah! Orange icon from courtesy of Yap Wei Yao. © 2011, Yap Wei Yao.</string>
    <string name="requirements">During the first run, you will need to be within NUS wireless network, with your Android phone Wi-Fi turned on.</string>
    <string name="step1">The first page is called \"Dashboard\".\nIn the dashboard, you will find two tabs - \"Timetable\" and \"Settings\".</string>
    <string name="step2">In the \"Timetable\" tab, you can add, delete, edit or view the schedules in the timetable.\nA quickaction dialog will be opened upon clicking on any schedules on the timetable.</string>
    <string name="step3">In the \"Settings\" tab, you can enter your Matriculation number, modify your ringtone response and clear the current data.</string>
    <string name="step4">There is also Auto-Reply SMS service. When the Auto-Reply SMS service is activated, SMS will be sent to any caller during your lesson.</string>
    <string name="step5">Lastly, go back to the \"Dashboard\" to activate Diamlah!.\nNow leave it to us help you to change to silent/vibration mode during your lessons.\nHappy Studying!</string>
    <string name="welcome">Welcome to Diamlah! Press \&quot;Next\&quot; button below to learn how to use the application.</string>
</resources>
